src/objects/Sales_Personnel__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <formula>User__r.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Channel__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Sales Channel</label>
        <referenceTo>Sales_Channel__c</referenceTo>
        <relationshipLabel>Sales Personnel</relationshipLabel>
        <relationshipName>Sales_Personnel</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Personnel</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Sales Personnel</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SP-{0000}</displayFormat>
        <label>Sales Personnel Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Personnel</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>